added brands and 1 modal window

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
     <section id="request">
         <div class="container">
-            <div class="request__title">
+            <div class="request__title title">
                 <h3>Подробная заявка</h3>
             </div>
             <div class="request__subtitle">
@@ -192,6 +192,75 @@
             </form>
         </div>
     </section>
+    <section id="brands">
+        <div class="container">
+            <div class="brands__title title">
+                <h3>Имеем в наличии детали на авто:</h3>
+            </div>
+            <div class="row brands__row m-auto d-flex justify-content-center align-items-center">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <img class="" src="/img/brands/audi-logo.png" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
+                    <img src="/img/brands/Mercedes-Benz.png" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
+                    <img src="/img/brands/bmw.png" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-2 ">
+                    <img src="/img/brands/Volkswagen.png" alt="">
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+                    <img class="" src="/img/brands/jaguar-logo.png" alt="">
+                </div>
+            </div>
+            <!-- 1 -->
+            <div class="row brands__row m-auto d-flex justify-content-center">
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/Volvo_Logo.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/mini_logo.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/logo-land-rover.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/honda.png" alt="">
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="row brands__row m-auto d-flex justify-content-center">
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/logo-jeep.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/bentley-11.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/Porsche_logo.png" alt="">
+                </div>
+                <div class="col-md-3 col-lg-2 ">
+                    <img src="/img/brands/Mazda_Logo.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Modal windows -->
+    <div class="modal">
+        <div class="container">
+            <div class="row modal__row">
+                <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">
+                    <div class="modal__top">
+                        <p class="modal__text"><span>Спасибо за вашу заявку!</span><br>
+                            Мы свяжемся с Вами в ближайшее время!</p>
+                        <div class="modal__cross"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/js/modal.js"></script>
 </body>
 
 </html>
