--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Request Section -->
     <section id="request">
         <div class="container">
             <div class="request__title title">
@@ -192,6 +194,8 @@
             </form>
         </div>
     </section>
+
+    <!-- Brands Section -->
     <section id="brands">
         <div class="container">
             <div class="brands__title title">
@@ -246,6 +250,166 @@
             </div>
         </div>
     </section>
+
+    <!-- Camera Section -->
+    <section id="camera">
+        <div class="container">
+            <div class="camera__title title">
+                <h3>Вы можете посмотреть что происходит у нас!</h3>
+            </div>
+            <div class="row camera__row justify-content-center">
+                <div class="col-12 col-md-10 col-lg-8">
+                    <div class="container-video d-flex justify-content-center">
+                        <iframe width="780" height="390" class="" src="https://www.youtube.com/embed/fyd3PDnYK2w"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Clients Section -->
+    <section id="clients">
+        <div class="container">
+            <div class="title">
+                <h3>Клиенты о нас</h3>
+            </div>
+            <div class="row clients__row">
+                <div class="col-12 col-md-6">
+                    <div class="clients__item d-flex">
+                        <div class="clients__image">
+                            <img src="/img/client_photo.png" alt="">
+                        </div>
+                        <div class="clients__content">
+                            <p class="clients__name">Иван Иванович</p>
+                            <p class="clients__question">Не могу найти фару для авто</p>
+                            <p class="clients__text">“ Мотордеталь в широком ассортименте по ценам от известного
+                                дистрибьютора автозапчастей. ООО "РАДИАТОР" пользуется заслуженным уважением среди
+                                покупателей, благодаря высокому сервису, скидкам, отличному качеству продукции.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="clients__item d-flex">
+                        <div class="clients__image">
+                            <img src="/img/client_photo.png" alt="">
+                        </div>
+                        <div class="clients__content">
+                            <p class="clients__name">Иван Иванович</p>
+                            <p class="clients__question">Не могу найти фару для авто</p>
+                            <p class="clients__text">“ Мотордеталь в широком ассортименте по ценам от известного
+                                дистрибьютора автозапчастей. ООО "РАДИАТОР" пользуется заслуженным уважением среди
+                                покупателей, благодаря высокому сервису, скидкам, отличному качеству продукции.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="clients__item d-flex">
+                        <div class="clients__image">
+                            <img src="/img/client_photo.png" alt="">
+                        </div>
+                        <div class="clients__content">
+                            <p class="clients__name">Иван Иванович</p>
+                            <p class="clients__question">Не могу найти фару для авто</p>
+                            <p class="clients__text">“ Мотордеталь в широком ассортименте по ценам от известного
+                                дистрибьютора автозапчастей. ООО "РАДИАТОР" пользуется заслуженным уважением среди
+                                покупателей, благодаря высокому сервису, скидкам, отличному качеству продукции.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="clients__item d-flex">
+                        <div class="clients__image">
+                            <img src="/img/client_photo.png" alt="">
+                        </div>
+                        <div class="clients__content">
+                            <p class="clients__name">Иван Иванович</p>
+                            <p class="clients__question">Не могу найти фару для авто</p>
+                            <p class="clients__text">“ Мотордеталь в широком ассортименте по ценам от известного
+                                дистрибьютора автозапчастей. ООО "РАДИАТОР" пользуется заслуженным уважением среди
+                                покупателей, благодаря высокому сервису, скидкам, отличному качеству продукции.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Consult Section -->
+    <section id="consult">
+        <div class="container">
+            <div class="consult__title title">
+                <h3>Нужна консультация?</h3>
+            </div>
+            <div class="consult__subtitle subtitle">
+                <h4>Заполните форму и получите максимально точную цену!</h4>
+            </div>
+            <form action="" class="consult__form">
+                <div class="row consult__row d-flex justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4">
+                        <p>Ваше имя:</p>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4">
+                        <p>Ваше имя:</p>
+                        <input type="text">
+                    </div>
+                    <div class="col-12">
+                        <div class="consult__btn d-flex justify-content-center">
+                            <button class="header__redBtn">Заказать консультацию</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+    <section id="map">
+        <div class="container">
+            <div class="row map__row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6">
+                    <div class="map__content d-flex justify-content-center flex-column align-items-center">
+                        <h4 class="map__title">Контакты</h4>
+                        <p class="map__address">г. Москва, ул. Дорожная, 8, к.1</p>
+                        <p class="map__phone">8 800 123 43 34</p>
+                        <a class="map__link" href="#">info@sitename.ru</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="" id="footer">
+        <div class="container">
+            <div class="row footer__row">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <div class="header__logo">
+                                <img src="/img/logo.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="header__phoneColumn">
+                                <p class="header__phoneNumber footer__phoneNumber">8 800 232 32 12</p>
+                                <a href="#" class="header__callOrder">Заказать обратный звонок</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
     <!-- Modal windows -->
     <div class="modal">
         <div class="container">
