--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-12 col-md-5">
                     <div class="header__btnColumn">
-                        <button class="header__redBtn">Быстрая заявка</button>
+                        <button class="header__redBtn callback-btn">Быстрая заявка</button>
                         <p class="header__btnText">Мы перезвоним Вам для уточнения деталей.</p>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
             <div class="request__subtitle">
                 <h4>Заполните форму и получите максимально точную цену!</h4>
             </div>
-            <form class="request__form" action="#">
+            <form class="request__form" action="#" onsubmit="return false;">
                 <div class="row request__row">
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="request__selectColumn">
@@ -188,7 +188,7 @@
                         <input type="tel">
                         <p>Ваш e-mail:</p>
                         <input type="email">
-                        <button class="header__redBtn request__btn">Узнать цену</button>
+                        <button class="header__redBtn request__btn thanks-btn">Узнать цену</button>
                     </div>
                 </div>
             </form>
@@ -350,7 +350,7 @@
             <div class="consult__subtitle subtitle">
                 <h4>Заполните форму и получите максимально точную цену!</h4>
             </div>
-            <form action="" class="consult__form">
+            <form action="" class="consult__form" onsubmit="return false;">
                 <div class="row consult__row d-flex justify-content-center">
                     <div class="col-12 col-md-6 col-lg-5 col-xl-4">
                         <p>Ваше имя:</p>
@@ -362,7 +362,7 @@
                     </div>
                     <div class="col-12">
                         <div class="consult__btn d-flex justify-content-center">
-                            <button class="header__redBtn">Заказать консультацию</button>
+                            <button class="header__redBtn thanks-btn">Заказать консультацию</button>
                         </div>
                     </div>
                 </div>
@@ -415,9 +415,18 @@
         <div class="container">
             <div class="row modal__row">
                 <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">
-                    <div class="modal__top">
+                    <div class="modal__box modal__thanks">
                         <p class="modal__text"><span>Спасибо за вашу заявку!</span><br>
                             Мы свяжемся с Вами в ближайшее время!</p>
+                        <div class="modal__cross"></div>
+                    </div>
+                    <div class="modal__box modal__callback">
+                        <p class="modal__text"><span>Заказ обратного звонка</span><br>
+                            Оставьте заявку и мы Вам перезвоним!
+                        </p>
+                        <input class="modal__input" type="text">
+                        <input class="modal__input" type="text">
+                        <button class="modal__btn header__redBtn">Отправить заявку</button>
                         <div class="modal__cross"></div>
                     </div>
                 </div>
