--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col-12 col-md-8">
                     <div class="header__phoneColumn">
                         <p class="header__phoneNumber">8 800 232 32 12</p>
-                        <a href="#" class="header__callOrder">Заказать обратный звонок</a>
+                        <a href="#" class="header__callOrder callback-btn">Заказать обратный звонок</a>
                     </div>
                 </div>
             </div>
@@ -64,13 +64,13 @@
                 <div class="col-md-1"></div>
                 <div class="col-12 col-md-5">
                     <div class="header__btnColumn">
-                        <button class="header__redBtn callback-btn">Быстрая заявка</button>
+                        <button class="header__redBtn fast-callback-btn">Быстрая заявка</button>
                         <p class="header__btnText">Мы перезвоним Вам для уточнения деталей.</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-5">
                     <div class="header__btnColumn">
-                        <button class="header__redBtn">Подробная заявка</button>
+                        <a href="#request" class="header__redBtn link-btn">Подробная заявка</a>
                         <p class="header__btnText">Заполните подробную заявку онлайн!</p>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
     </section>
 
     <!-- Request Section -->
-    <section id="request">
+    <section id="request" name="request">
         <div class="container">
             <div class="request__title title">
                 <h3>Подробная заявка</h3>
@@ -188,7 +188,7 @@
                         <input type="tel">
                         <p>Ваш e-mail:</p>
                         <input type="email">
-                        <button class="header__redBtn request__btn thanks-btn">Узнать цену</button>
+                        <button class="header__redBtn request__btn black-text-btn thanks-btn">Узнать цену</button>
                     </div>
                 </div>
             </form>
@@ -357,12 +357,12 @@
                         <input type="text">
                     </div>
                     <div class="col-12 col-md-6 col-lg-5 col-xl-4">
-                        <p>Ваше имя:</p>
+                        <p>Ваше телефон:</p>
                         <input type="text">
                     </div>
                     <div class="col-12">
                         <div class="consult__btn d-flex justify-content-center">
-                            <button class="header__redBtn thanks-btn">Заказать консультацию</button>
+                            <button class="header__redBtn thanks-btn black-text-btn">Заказать консультацию</button>
                         </div>
                     </div>
                 </div>
@@ -396,7 +396,7 @@
                         <div class="col-12 col-md-8">
                             <div class="header__phoneColumn">
                                 <p class="header__phoneNumber footer__phoneNumber">8 800 232 32 12</p>
-                                <a href="#" class="header__callOrder">Заказать обратный звонок</a>
+                                <p href="#" class="header__callOrder callback-btn">Заказать обратный звонок</p>
                             </div>
                         </div>
                     </div>
@@ -424,9 +424,19 @@
                         <p class="modal__text"><span>Заказ обратного звонка</span><br>
                             Оставьте заявку и мы Вам перезвоним!
                         </p>
-                        <input class="modal__input" type="text">
-                        <input class="modal__input" type="text">
-                        <button class="modal__btn header__redBtn">Отправить заявку</button>
+                        <input class="modal__input" type="text" placeholder="Ваше имя">
+                        <input class="modal__input" type="text" placeholder="Ваш телефон">
+                        <input class="modal__input" type="text" placeholder="Ваша почта">
+                        <button class="modal__btn black-text-btn header__redBtn thanks-btn" onclick="modalCallback.style.display = 'none';modal.style.display = 'none'; hideTimer(5000);">Отправить заявку</button>
+                        <div class="modal__cross"></div>
+                    </div>
+                    <div class="modal__box modal__fastCallback">
+                        <p class="modal__text"><span>Быстрая заявка</span><br>
+                            Оставьте заявку и мы Вам перезвоним!
+                        </p>
+                        <input class="modal__input" type="text" placeholder="Ваше имя">
+                        <input class="modal__input" type="text" placeholder="Ваш телефон">
+                        <button class="modal__btn black-text-btn header__redBtn thanks-btn" onclick="modalCallback.style.display = 'none';modal.style.display = 'none'; hideTimer(5000);">Отправить заявку</button>
                         <div class="modal__cross"></div>
                     </div>
                 </div>
