fixed all(i hope) bugs with modal windows

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         </p>
                         <input class="modal__input" type="text" placeholder="Ваше имя">
                         <input class="modal__input" type="text" placeholder="Ваш телефон">
-                        <button class="modal__btn black-text-btn header__redBtn thanks-btn" onclick="modalCallback.style.display = 'none';modal.style.display = 'none'; hideTimer(5000);">Отправить заявку</button>
+                        <button class="modal__btn black-text-btn header__redBtn thanks-btn" onclick="modalFastCallback.style.display = 'none';modal.style.display = 'none'; hideTimer(5000);">Отправить заявку</button>
                         <div class="modal__cross"></div>
                     </div>
                 </div>
