fixed linear gradient

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="header__phoneColumn">
-                        <p class="header__phoneNumber">8 800 232 32 12</p>
+                        <a href="tel:88002323212" class="header__phoneNumber">8 800 232 32 12</a>
                         <a href="#" class="header__callOrder callback-btn">Заказать обратный звонок</a>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                     <div class="map__content d-flex justify-content-center flex-column align-items-center">
                         <h4 class="map__title">Контакты</h4>
                         <p class="map__address">г. Москва, ул. Дорожная, 8, к.1</p>
-                        <p class="map__phone">8 800 123 43 34</p>
+                        <a href="tel:88002323212" class="map__phone">8 800 123 43 34</a>
                         <a class="map__link" href="#">info@sitename.ru</a>
                     </div>
                 </div>
@@ -395,7 +395,7 @@
                         </div>
                         <div class="col-12 col-md-8">
                             <div class="header__phoneColumn">
-                                <p class="header__phoneNumber footer__phoneNumber">8 800 232 32 12</p>
+                                <a href="tel:88002323212" class="header__phoneNumber footer__phoneNumber">8 800 232 32 12</a>
                                 <p href="#" class="header__callOrder callback-btn">Заказать обратный звонок</p>
                             </div>
                         </div>
