--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row header__topRow">
                 <div class="col-12 col-md-4">
                     <div class="header__logo">
-                        <img src="/img/logo.png" alt="">
+                        <img src="img/logo.png" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-8">
@@ -40,21 +40,21 @@
                 <div class="col-md-2"></div>
                 <div class="col-12 col-md-2">
                     <div class="header__iconColumn">
-                        <img src="/img/icons/icon-car.png" alt="" class="header__icon">
+                        <img src="img/icons/icon-car.png" alt="" class="header__icon">
                         <h3 class="header__iconDescription">Доставка по РФ от 3-х дней</h3>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-12 col-md-2">
                     <div class="header__iconColumn">
-                        <img src="/img/icons/icon-star.png" alt="" class="header__icon">
+                        <img src="img/icons/icon-star.png" alt="" class="header__icon">
                         <h3 class="header__iconDescription">Новое состояние по цене б/у</h3>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-12 col-md-2">
                     <div class="header__iconColumn">
-                        <img src="/img/icons/icon-list.png" alt="" class="header__icon">
+                        <img src="img/icons/icon-list.png" alt="" class="header__icon">
                         <h3 class="header__iconDescription">Наличие более 500 различных деталей</h3>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
             <div class="row redIcons__row">
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="redIcon__column">
-                        <div class="redIcons__icon"><img src="/img/icons/icon-redlist.png" alt=""></div>
+                        <div class="redIcons__icon"><img src="img/icons/icon-redlist.png" alt=""></div>
                         <div class="redIcons__title">
                             <h4>Более 1000 наименований</h4>
                         </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="redIcon__column">
-                        <div class="redIcons__icon"><img src="/img/icons/icon-redcar.png" alt=""></div>
+                        <div class="redIcons__icon"><img src="img/icons/icon-redcar.png" alt=""></div>
                         <div class="redIcons__title">
                             <h4>Доставка в любой регион РФ</h4>
                         </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="redIcon__column">
-                        <div class="redIcons__icon"><img src="/img/icons/icon-new.png" alt=""></div>
+                        <div class="redIcons__icon"><img src="img/icons/icon-new.png" alt=""></div>
                         <div class="redIcons__title">
                             <h4>Новое состояние деталей</h4>
                         </div>
@@ -119,7 +119,7 @@
                 <div class="col-0 col-md-2 redIcons__gap"></div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="redIcon__column">
-                        <div class="redIcons__icon"><img src="/img/icons/icon-europe.png" alt=""></div>
+                        <div class="redIcons__icon"><img src="img/icons/icon-europe.png" alt=""></div>
                         <div class="redIcons__title">
                             <h4>Европейское качество</h4>
                         </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-4">
                     <div class="redIcon__column">
-                        <div class="redIcons__icon"><img src="/img/icons/icon-pages.png" alt=""></div>
+                        <div class="redIcons__icon"><img src="img/icons/icon-pages.png" alt=""></div>
                         <div class="redIcons__title">
                             <h4>Работаем по договору</h4>
                         </div>
@@ -203,49 +203,49 @@
             </div>
             <div class="row brands__row m-auto d-flex justify-content-center align-items-center">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <img class="" src="/img/brands/audi-logo.png" alt="">
+                    <img class="" src="img/brands/audi-logo.png" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
-                    <img src="/img/brands/Mercedes-Benz.png" alt="">
+                    <img src="img/brands/Mercedes-Benz.png" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
-                    <img src="/img/brands/bmw.png" alt="">
+                    <img src="img/brands/bmw.png" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-2 ">
-                    <img src="/img/brands/Volkswagen.png" alt="">
+                    <img src="img/brands/Volkswagen.png" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                    <img class="" src="/img/brands/jaguar-logo.png" alt="">
+                    <img class="" src="img/brands/jaguar-logo.png" alt="">
                 </div>
             </div>
             <!-- 1 -->
             <div class="row brands__row m-auto d-flex justify-content-center">
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/Volvo_Logo.png" alt="">
+                    <img src="img/brands/Volvo_Logo.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/mini_logo.png" alt="">
+                    <img src="img/brands/mini_logo.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/logo-land-rover.png" alt="">
+                    <img src="img/brands/logo-land-rover.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/honda.png" alt="">
+                    <img src="img/brands/honda.png" alt="">
                 </div>
             </div>
             <!-- 2 -->
             <div class="row brands__row m-auto d-flex justify-content-center">
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/logo-jeep.png" alt="">
+                    <img src="img/brands/logo-jeep.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/bentley-11.png" alt="">
+                    <img src="img/brands/bentley-11.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/Porsche_logo.png" alt="">
+                    <img src="img/brands/Porsche_logo.png" alt="">
                 </div>
                 <div class="col-md-3 col-lg-2 ">
-                    <img src="/img/brands/Mazda_Logo.png" alt="">
+                    <img src="img/brands/Mazda_Logo.png" alt="">
                 </div>
             </div>
         </div>
@@ -280,7 +280,7 @@
                 <div class="col-12 col-md-6">
                     <div class="clients__item d-flex">
                         <div class="clients__image">
-                            <img src="/img/client_photo.png" alt="">
+                            <img src="img/client_photo.png" alt="">
                         </div>
                         <div class="clients__content">
                             <p class="clients__name">Иван Иванович</p>
@@ -295,7 +295,7 @@
                 <div class="col-12 col-md-6">
                     <div class="clients__item d-flex">
                         <div class="clients__image">
-                            <img src="/img/client_photo.png" alt="">
+                            <img src="img/client_photo.png" alt="">
                         </div>
                         <div class="clients__content">
                             <p class="clients__name">Иван Иванович</p>
@@ -310,7 +310,7 @@
                 <div class="col-12 col-md-6">
                     <div class="clients__item d-flex">
                         <div class="clients__image">
-                            <img src="/img/client_photo.png" alt="">
+                            <img src="img/client_photo.png" alt="">
                         </div>
                         <div class="clients__content">
                             <p class="clients__name">Иван Иванович</p>
@@ -325,7 +325,7 @@
                 <div class="col-12 col-md-6">
                     <div class="clients__item d-flex">
                         <div class="clients__image">
-                            <img src="/img/client_photo.png" alt="">
+                            <img src="img/client_photo.png" alt="">
                         </div>
                         <div class="clients__content">
                             <p class="clients__name">Иван Иванович</p>
@@ -390,7 +390,7 @@
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <div class="header__logo">
-                                <img src="/img/logo.png" alt="">
+                                <img src="img/logo.png" alt="">
                             </div>
                         </div>
                         <div class="col-12 col-md-8">
